# SI3DC---Medical-Platform

./: .gitignore  README.md
si3dc-Backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_result.txt  login_test.txt  mock_api.py  pyproject.toml  pyrightconfig.json  setup_result.txt  test_debug.txt  test_debug2.txt  test_debug3.txt  test_debug4.txt  test_results.txt  test_results2.txt
si3dc-Backend/backend/: config.py  main.py
si3dc-Backend/backend/ai/governance/: ai_governance.py  confidence_scorer.py  hallucination_detector.py
si3dc-Backend/backend/ai/models/: model_adapter.py
si3dc-Backend/backend/ai/pipelines/: clinical_pipeline.py
si3dc-Backend/backend/api/routes/: ai.py  auth.py  clinical.py  emergency.py  patients.py
si3dc-Backend/backend/domain/models/: base.py  clinical.py  institution.py  patient.py  professional.py  refresh_token.py
si3dc-Backend/backend/domain/repositories/: interfaces.py
si3dc-Backend/backend/governance/: consent.py
si3dc-Backend/backend/governance/monitoring/: health.py  logging_config.py  metrics.py  tracing.py
si3dc-Backend/backend/infrastructure/auth/: audit.py  jwt_handler.py  oauth2.py  (+1 more)
si3dc-Backend/backend/services/: clinical_service.py  patient_service.py
si3dc-Backend/migrations/: env.py
si3dc-Backend/migrations/versions/: 001_initial_schema.py
si3dc-Backend/monitoring/: prometheus.yml
si3dc-Backend/scripts/: init_db.py  setup_supabase.py  test_login.py
si3dc-Backend/tests/: conftest.py  conftest_integration.py  test_ai_pipeline.py  test_auth.py  test_clinical.py  test_emergency.py  test_integration_auth.py  test_integration_patients.py  test_patients.py  test_security.py
(+36 files in other folders)
